# Transformer-ASL

./: .gitignore  CMakeLists.txt  README.md  vit_asl.pt
examples/: infer_vit.cpp  train_vit.cpp
include/: transformer.h
include/transformer/: asl_dataset.h  encoder_block.h  patch_embedding.h  utils.h  vit.h
src/: encoder_block.cpp  patch_embedding.cpp  utils.cpp  vit.cpp
